[gd_scene load_steps=2 format=2]

[ext_resource path="res://PlayScreen/PlayScreen.gd" type="Script" id=1]

[node name="PlayScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="StartCanvas" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="StartCanvas"]
margin_left = 1.0
margin_right = 1026.0
margin_bottom = 605.0
color = Color( 0.607843, 0.741176, 0.952941, 1 )

[node name="StartButton" type="Button" parent="StartCanvas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.0
margin_top = -27.5
margin_right = 158.0
margin_bottom = 27.5
text = "Start Game!"

[node name="PlayAgainCanvas" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="PlayAgainCanvas"]
margin_top = -3.0
margin_right = 1028.0
margin_bottom = 603.0
color = Color( 0.294118, 0.596078, 0.862745, 1 )

[node name="PlayAgainButton" type="Button" parent="PlayAgainCanvas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.0
margin_top = -27.0
margin_right = 158.0
margin_bottom = 27.0
text = "Play Again?"

[connection signal="pressed" from="PlayAgainCanvas/PlayAgainButton" to="PlayAgainCanvas/PlayAgainButton" method="_on_PlayAgainButton_pressed"]
